@@ -1,3 +1,9 @@
+[B]1.3.0[/B]
+- fixed the addon after website changes
+- added the new mediaset channel 20 and icon (thx to gdx2015)
+- fixed the live channel base url (thx to gdx2015)
+- updated the canale 5 logo with the updated one (thx to fsponga/Cristiano)
+
 [B]1.2.2[/B]
 - fixed the addon after website changes (thx to wizy)
 
